Fixed files in Windows Improved device selection readability in Windows Changed react-menu version to 3.5.1 to avoid styling issues

--- a/src/app/components/ActiveSong/SongTrack/SongTrack.css
+++ b/src/app/components/ActiveSong/SongTrack/SongTrack.css
@@ -44,3 +44,7 @@
 .SongTrack-device:not([disabled]):hover, .SongTrack-device:not([disabled]):focus-visible {
   background: rgba(255, 128, 128, 0.2);
 }
+
+.SongTrack-device > option {
+  background-color: var(--bg-color-light);
+}
